--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 </button>
             </div>
         </header>
-        <main class="mt-10">
+        <main class="mt-10 overflow-auto">
             <div id="drawer-overlay" class="fixed w-screen h-screen left-0 top-0 bg-black/50 hidden"></div>
             <aside id="drawer"
                    class="fixed top-0 right-0 bg-white h-full w-96 p-6 rounded-md translate-x-full transition-transform duration-200 ease-in-out">
@@ -116,19 +116,19 @@
                     </button>
                 </form>
             </aside>
-            <div id="metrics" class="flex gap-4">
+            <div id="metrics" class="flex-col md:flex-row flex gap-4">
             <!-- Metrics -->
             </div>
-            <div class="flex gap-4 min-h-96 h-0 mt-4">
-                <div class="flex-1 flex h-full flex-col p-6 border rounded-xl shadow">
-                    <h2 class="font-semibold text-lg">Expenses chart</h2>
-                    <div id="expenses-chart">
+            <div class="flex-1 flex flex-col h-44 md:h-96 lg:flex-row gap-4 mt-4">
+                <div class="flex-1 rounded-xl border shadow p-6 flex flex-col">
+                    <h2 class="font-semibold mb-1">Expenses chart</h2>
+                    <div id="expenses-chart" class="h-full">
                         <!--Expenses chart-->
                     </div>
                 </div>
-                <div class="flex-1 flex h-full flex-col p-6 border rounded-xl shadow">
-                    <h2 class="font-semibold text-lg">Recent transactions</h2>
-                    <div id="transaction-list" class="flex-1 flex flex-col overflow-hidden">
+                <div class="flex-1 rounded-xl border shadow p-6 flex flex-col">
+                    <h2 class="font-semibold mb-1">Recent Transactions</h2>
+                    <div id="transaction-list" class="h-full">
                         <!--Transaction List-->
                     </div>
                 </div>
